--- a/SDK-release.json
+++ b/SDK-release.json
@@ -8,35 +8,32 @@
     "version":"2.0.0"
     },
   "PHP5":{
-    "releaseData":"2020.08.31",
-    "version":"1.0.0"
+    "releaseData":"2020.08.31"
     },
   "PHP7":{
     "releaseData":"2020.07.16",
     "version":"1.2.0"
     },
   "Dotnet":{
-    "releaseData":"2020.05.28",
-    "sdkVersion":"1.0.0"
+    "releaseData":"2020.05.28"
     },
   "DotnetCore":{
     "releaseData":"2020.05.28",
-    "sdkVersion":"1.0.0"
+    "version":"1.0.0"
     },
   "Node":{
     "releaseData":"2020.08.31",
-    "sdkVersion":"1.1.0"
+    "version":"1.1.0"
     },
   "Python":{
     "releaseData":"2020.05.28",
-    "sdkVersion":"1.0.0"
+    "version":"1.0.0"
     },
   "ASP":{
-    "releaseData":"2020.05.28",
-    "sdkVersion":"1.0.0"
+    "releaseData":"2020.05.28"
     },
   "Ruby":{
     "releaseData":"2020.06.23",
-    "sdkVersion":"1.0.2"
+    "version":"1.0.2"
     }
 }
