--- a/SDK-release.json
+++ b/SDK-release.json
@@ -8,32 +8,32 @@
     "version":"2.0.0"
     },
   "PHP5":{
-    "releaseData":"2020.08.31"
+    "releaseDate":"2020.08.31"
     },
   "PHP7":{
-    "releaseData":"2020.07.16",
+    "releaseDate":"2020.07.16",
     "version":"1.2.0"
     },
   "Dotnet":{
-    "releaseData":"2020.05.28"
+    "releaseDate":"2020.05.28"
     },
   "DotnetCore":{
-    "releaseData":"2020.05.28",
+    "releaseDate":"2020.05.28",
     "version":"1.0.0"
     },
   "Node":{
-    "releaseData":"2020.08.31",
+    "releaseDate":"2020.08.31",
     "version":"1.1.0"
     },
   "Python":{
-    "releaseData":"2020.05.28",
+    "releaseDate":"2020.05.28",
     "version":"1.0.0"
     },
   "ASP":{
-    "releaseData":"2020.05.28"
+    "releaseDate":"2020.05.28"
     },
   "Ruby":{
-    "releaseData":"2020.06.23",
+    "releaseDate":"2020.06.23",
     "version":"1.0.2"
     }
 }
